@@ -1,49 +1,3 @@
-##' Class "enrichResult"
-##' This class represents the result of enrichment analysis.
-##'
-##'
-##' @name enrichResult-class
-##' @aliases enrichResult-class
-##'   show,enrichResult-method summary,enrichResult-method
-##'   plot,enrichResult-method
-##'
-##' @docType class
-##' @slot result enrichment analysis
-##' @slot pvalueCutoff pvalueCutoff
-##' @slot pAdjustMethod pvalue adjust method
-##' @slot qvalueCutoff qvalueCutoff
-##' @slot organism only "human" supported
-##' @slot ontology biological ontology
-##' @slot gene Gene IDs
-##' @slot keytype Gene ID type
-##' @slot universe background gene
-##' @slot geneInCategory gene and category association
-##' @slot gene2Symbol mapping gene to Symbol
-##' @slot geneSets gene sets
-##' @slot readable logical flag of gene ID in symbol or not.
-##' @exportClass enrichResult
-##' @author Guangchuang Yu \url{https://guangchuangyu.github.io}
-##' @seealso \code{\link{enrichDO}}
-##' @keywords classes
-setClass("enrichResult",
-         representation=representation(
-             result         = "data.frame",
-             pvalueCutoff   = "numeric",
-             pAdjustMethod  = "character",
-             qvalueCutoff   = "numeric",
-             organism       = "character",
-             ontology       = "character",
-             gene           = "character",
-             keytype        = "character",
-             universe       = "character",
-             geneInCategory = "list",
-             gene2Symbol    = "character",
-             geneSets       = "list",
-             readable       = "logical"
-             ),
-         prototype=prototype(readable = FALSE)
-         )
-
 ##' show method for \code{enrichResult} instance
 ##'
 ##' @name show
@@ -254,61 +208,4 @@ setMethod("cnetplot", signature(x="enrichResult"),
                                     fixed=fixed, ...)
           }
           )
-
-##' accessing gene set
-##'
-##' 
-##' @rdname subset2-methods
-##' @title [[ method
-##' @param x enrichResult object
-##' @param i term to query
-##' @exportMethod [[
-setMethod("[[", signature(x="enrichResult"),
-          function(x, i) {
-              if (!i %in% names(x@geneInCategory))
-                  stop("input term not found...")
-              x@geneInCategory[[i]]
-})
-
-
-##' accessing enriched result
-##'
-##' 
-##' @rdname subset-methods
-##' @title [ method
-##' @param x enrichResult object
-##' @param i index
-##' @param j index
-##' @exportMethod [
-setMethod("[", signature(x="enrichResult"),
-          function(x, i, j) {
-              x@result[i,j]
-})
-
-##' accessing enriched result
-##'
-##' 
-##' @rdname subset3-methods
-##' @title $ method
-##' @param x enrichResult object
-##' @param name string
-##' @exportMethod $
-setMethod("$", signature(x="enrichResult"),
-          function(x, name) {
-              x@result[, name]
-          })
-
-##' @importFrom utils head
-##' @method head enrichResult
-##' @export
-head.enrichResult <- function(x, n=6L, ...) {
-    head(x@result, n, ...)
-}
-
-##' @importFrom utils tail
-##' @method tail enrichResult
-##' @export
-tail.enrichResult <- function(x, n=6L, ...) {
-    tail(x@result, n, ...)
-}
 
